--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9913,6 +9913,7 @@ h3 {
 .a-nav {
   color: white;
   margin: 30px;
+  height: 50px;
 }
 
 .a-nav:hover {
@@ -9953,12 +9954,38 @@ h3 {
 
 .button-caroussel {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  border-radius: 50%;
+  border-radius: 10rem;
 }
 
 .button2-caroussel {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  border-radius: 50%;
+  border-radius: 10rem;
 }
+
+/*fin caroussel*/
+/*section 1*/
+.section1 {
+  height: 1200px;
+  background-image: url(../../images/main_bg.jpg);
+}
+
+.div1-section1 {
+  height: 1150px;
+  margin-top: 45px;
+  margin-left: 100px;
+  margin-right: 100px;
+  background-color: white;
+}
+
+.div2-section1 {
+  height: 400px;
+  background-color: red;
+}
+
+.img-section1 {
+  justify-content: flex-end;
+}
+
+/*fin section1*/
 
 /*# sourceMappingURL=app.css.map */
