--- a/src/sass/modules/style.sass
+++ b/src/sass/modules/style.sass
@@ -2,6 +2,7 @@
 .a-nav
     color: white
     margin: 30px
+    height: 50px
 
 .a-nav:hover
     background-color: red
@@ -37,11 +38,33 @@
 
 .button-caroussel
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
-    border-radius: 50%
+    border-radius: 10rem
 
 .button2-caroussel
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
-    border-radius: 50%
+    border-radius: 10rem
+
+/*fin caroussel*/
+
+/*section 1*/
+.section1 
+  height: 1200px
+  background-image: url(../../images/main_bg.jpg)
+
+.div1-section1
+    height: 1150px
+    margin-top: 45px
+    margin-left: 100px
+    margin-right: 100px
+    background-color: white
+
+.div2-section1
+    height: 400px
+    background-color: red
 
 
-    
+.img-section1
+    justify-content: flex-end
+
+
+/*fin section1*/
