--- a/src/sass/modules/style.sass
+++ b/src/sass/modules/style.sass
@@ -7,6 +7,7 @@
 .a-nav:hover
     background-color: red
     color: white
+    text-decoration: none
 
 .div2-nav
     border-top: white solid 1px
@@ -47,6 +48,7 @@
 /*fin caroussel*/
 
 /*section 1*/
+
 .section1 
   height: 1200px
   background-image: url(../../images/main_bg.jpg)
@@ -60,11 +62,132 @@
 
 .div2-section1
     height: 400px
-    background-color: red
 
 
 .img-section1
-    justify-content: flex-end
-
+    margin-left: 450px 
+      
+.p-section1
+    margin-left: 450px
+    margin-top: 50px
+    font-family: 'Courgette', cursive
 
 /*fin section1*/
+
+/*section 2*/
+.section2
+    height: 600px
+    filter: brightness(40%)
+    background-color: black
+    background-image: url(../../../image/team_background.jpg)
+    
+
+.div1-section2
+    height: 500px
+    align-items: flex-end
+    justify-content: space-between
+    align-items: flex-end
+
+.img-section2
+    display: flex
+    border-bottom: grey solid
+
+
+.p-section2
+    color: white
+    align-items: center
+    margin-left: 10px
+
+.p-span-section2
+    display: flex
+    justify-content: center
+    margin-bottom: 400px
+    color: white
+
+.span-section2
+    color: red
+
+/*fin section 2*/
+
+/*section 3*/
+
+.section3
+    height: 1200px
+    background-image: url(../../../image/main_bg.jpg)
+
+.div1-section3
+    height: 1150px
+    background-color: grey
+    margin: 100px
+/*fin section 3*/
+
+/*section 4*/
+
+.section4
+    background-image: url(../../image/testimonials_background.jpg)
+    background-color: grey
+    height: 500px
+
+.p-section4
+    justify-content: center
+    margin-left: 500px
+    font-size: 50px
+
+
+.div-section4
+    background-color: black
+
+/*fin section 4*/
+
+/*section 5*/
+.section5
+    display: flex
+    height: 600px
+    justify-content: center    
+
+
+.div1-section5
+    display: flex
+    background-color: #ff4d4d
+    height: 400px
+    width: 500px
+    margin-top: 150px
+    margin-right: 100px
+    justify-content: center
+    align-items: center
+    flex-direction: column
+   
+
+.p-section5
+    border-bottom: solid 1px
+
+/*fin section 5*/
+
+/*section 6*/
+
+.div1-section6
+    height: 400px
+    background-color: black
+
+.div2-section6
+    flex-direction: column
+    align-items: center
+    justify-content: center
+
+.div-section6
+    margin-top: 100px
+
+/*section7*/
+
+.section7
+    background-color: #ff4d4d
+    height: 50px
+
+/*fin section 7*/
+
+
+
+
+
+    
+    
