--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9996,9 +9996,7 @@ h3 {
 /*section 2*/
 .section2 {
   height: 600px;
-  filter: brightness(40%);
   background-color: black;
-  background-image: url(../../../image/team_background.jpg);
 }
 
 .div1-section2 {
@@ -10034,7 +10032,7 @@ h3 {
 /*section 3*/
 .section3 {
   height: 1200px;
-  background-image: url(../../../image/main_bg.jpg);
+  background-image: url(../../images/main_bg.jpg);
 }
 
 .div1-section3 {
@@ -10046,8 +10044,7 @@ h3 {
 /*fin section 3*/
 /*section 4*/
 .section4 {
-  background-image: url(../../image/testimonials_background.jpg);
-  background-color: grey;
+  background-image: url(../../images/testimonials_background.jpg);
   height: 500px;
 }
 
@@ -10066,30 +10063,52 @@ h3 {
 .section5 {
   display: flex;
   height: 600px;
+  background-image: url(../../images/main_bg.jpg);
   justify-content: center;
 }
 
 .div1-section5 {
   display: flex;
+  flex-direction: column;
   background-color: #ff4d4d;
-  height: 400px;
+  height: 350px;
   width: 500px;
-  margin-top: 150px;
-  margin-right: 100px;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  margin-top: 200px;
+  margin-right: 200px;
 }
 
-.p-section5 {
+.div1-in-section5 {
+  display: flex;
+  border-bottom: solid white 1px;
+  align-items: center;
+  justify-content: center;
+}
+
+.p1-section5 {
+  font-family: "courgette";
+  font-size: 50px;
+}
+
+.span-section5 {
+  color: #ff4d4d;
+  font-size: 60px;
+}
+
+.p2-section5 {
   border-bottom: solid 1px;
+  text-align: center;
 }
 
 /*fin section 5*/
 /*section 6*/
+.section6 {
+  background-image: url(../../images/team_background.jpg);
+}
+
 .div1-section6 {
   height: 400px;
-  background-color: black;
 }
 
 .div2-section6 {
@@ -10098,7 +10117,7 @@ h3 {
   justify-content: center;
 }
 
-.div-section6 {
+.div3-section6 {
   margin-top: 100px;
 }
 
@@ -10106,6 +10125,14 @@ h3 {
 .section7 {
   background-color: #ff4d4d;
   height: 50px;
+}
+
+.div-logo {
+  border-radius: 100%;
+  height: 50px;
+  width: 50px;
+  background-color: white;
+  margin: 10px;
 }
 
 /*fin section 7*/
