--- a/src/sass/modules/style.sass
+++ b/src/sass/modules/style.sass
@@ -26,7 +26,6 @@
     font-family: 'Courgette', cursive
     font-size: 65px
 
-
 .span1-slide
     font-size: 100px
 
@@ -49,9 +48,9 @@
 
 /*section 1*/
 
-.section1 
-  height: 1200px
-  background-image: url(../../images/main_bg.jpg)
+.section1
+    height: 1200px
+    background-image: url(../../images/main_bg.jpg)
 
 .div1-section1
     height: 1150px
@@ -63,10 +62,9 @@
 .div2-section1
     height: 400px
 
-
 .img-section1
-    margin-left: 450px 
-      
+    margin-left: 450px
+
 .p-section1
     margin-left: 450px
     margin-top: 50px
@@ -77,10 +75,7 @@
 /*section 2*/
 .section2
     height: 600px
-    filter: brightness(40%)
     background-color: black
-    background-image: url(../../../image/team_background.jpg)
-    
 
 .div1-section2
     height: 500px
@@ -91,7 +86,6 @@
 .img-section2
     display: flex
     border-bottom: grey solid
-
 
 .p-section2
     color: white
@@ -113,7 +107,7 @@
 
 .section3
     height: 1200px
-    background-image: url(../../../image/main_bg.jpg)
+    background-image: url(../../images/main_bg.jpg)
 
 .div1-section3
     height: 1150px
@@ -124,15 +118,13 @@
 /*section 4*/
 
 .section4
-    background-image: url(../../image/testimonials_background.jpg)
-    background-color: grey
+    background-image: url(../../images/testimonials_background.jpg)
     height: 500px
 
 .p-section4
     justify-content: center
     margin-left: 500px
     font-size: 50px
-
 
 .div-section4
     background-color: black
@@ -143,38 +135,54 @@
 .section5
     display: flex
     height: 600px
-    justify-content: center    
-
+    background-image: url(../../images/main_bg.jpg)
+    justify-content: center
 
 .div1-section5
     display: flex
+    flex-direction: column
     background-color: #ff4d4d
-    height: 400px
+    height: 350px
     width: 500px
-    margin-top: 150px
-    margin-right: 100px
     justify-content: center
     align-items: center
-    flex-direction: column
-   
+    margin-top: 200px
+    margin-right: 200px
 
-.p-section5
+.div1-in-section5
+    display: flex
+    border-bottom: solid white 1px
+    align-items: center
+    justify-content: center
+
+.p1-section5
+    font-family: "courgette"
+    font-size: 50px
+
+.span-section5
+    color: #ff4d4d
+    font-size: 60px
+
+.p2-section5
     border-bottom: solid 1px
+    text-align: center
 
 /*fin section 5*/
 
 /*section 6*/
 
+.section6
+    background-image: url(../../images/team_background.jpg)
+
 .div1-section6
     height: 400px
-    background-color: black
 
 .div2-section6
     flex-direction: column
     align-items: center
     justify-content: center
 
-.div-section6
+.div3-section6
     margin-top: 100px
 
 /*section7*/
@@ -183,11 +191,11 @@
     background-color: #ff4d4d
     height: 50px
 
+.div-logo
+    border-radius: 100%
+    height: 50px
+    width: 50px
+    background-color: white
+    margin: 10px
+
 /*fin section 7*/
-
-
-
-
-
-    
-    
