--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9982,8 +9982,17 @@ h3 {
   height: 400px;
 }
 
-.img-section1 {
-  margin-left: 450px;
+.div2-in-section1 {
+  align-items: flex-end;
+  margin-top: 200px;
+}
+
+.img1-section1 {
+  margin-left: 1000px;
+}
+
+.img2-section1 {
+  margin-left: 1000px;
 }
 
 .p-section1 {
@@ -9995,15 +10004,20 @@ h3 {
 /*fin section1*/
 /*section 2*/
 .section2 {
-  height: 600px;
+  height: 700px;
   background-color: black;
 }
 
 .div1-section2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.div2-section2 {
   height: 500px;
-  align-items: flex-end;
-  justify-content: space-between;
-  align-items: flex-end;
+  margin-top: 150px;
 }
 
 .img-section2 {
@@ -10011,21 +10025,21 @@ h3 {
   border-bottom: grey solid;
 }
 
-.p-section2 {
-  color: white;
-  align-items: center;
-  margin-left: 10px;
+.p1-section2 {
+  font-family: "courgette";
+  font-size: 40px;
 }
 
-.p-span-section2 {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 400px;
+.p2-section2 {
   color: white;
+  align-items: center;
+  margin-left: 60px;
 }
 
 .span-section2 {
   color: red;
+  font-size: 50px;
+  font-family: "courgette";
 }
 
 /*fin section 2*/
@@ -10035,10 +10049,29 @@ h3 {
   background-image: url(../../images/main_bg.jpg);
 }
 
-.div1-section3 {
+.div-section3 {
   height: 1150px;
-  background-color: grey;
+  background-color: white;
   margin: 100px;
+}
+
+.img-topleft-section3 {
+  margin-right: 400px;
+}
+
+.img-topright-section3 {
+  margin-left: 400px;
+}
+
+.p-section3 {
+  font-size: 40px;
+  font-family: "courgette";
+}
+
+.span-section3 {
+  font-family: "courgette";
+  font-size: 50px;
+  color: red;
 }
 
 /*fin section 3*/
@@ -10048,14 +10081,39 @@ h3 {
   height: 500px;
 }
 
-.p-section4 {
-  justify-content: center;
-  margin-left: 500px;
-  font-size: 50px;
+.div1-section4 {
+  margin-left: 550px;
 }
 
-.div-section4 {
-  background-color: black;
+.span-section4 {
+  font-family: "courgette";
+  font-size: 40px;
+  color: red;
+}
+
+.p-section4 {
+  font-family: "courgette";
+  font-size: 30px;
+}
+
+.div2-section4 {
+  margin-top: 150px;
+  justify-content: center;
+}
+
+.div-txt-section4 {
+  border: solid 1px white;
+  height: 150px;
+  width: 400px;
+  margin: 20px;
+  border-radius: 3%;
+}
+
+.img-section4 {
+  border-radius: 100%;
+  border: 4px solid white;
+  height: 150px;
+  width: 150px;
 }
 
 /*fin section 4*/
@@ -10065,6 +10123,8 @@ h3 {
   height: 600px;
   background-image: url(../../images/main_bg.jpg);
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .div1-section5 {
@@ -10075,8 +10135,8 @@ h3 {
   width: 500px;
   justify-content: center;
   align-items: center;
-  margin-top: 200px;
-  margin-right: 200px;
+  margin-top: 50px;
+  border-radius: 5%;
 }
 
 .div1-in-section5 {
@@ -10084,6 +10144,8 @@ h3 {
   border-bottom: solid white 1px;
   align-items: center;
   justify-content: center;
+  color: white;
+  flex-direction: column;
 }
 
 .p1-section5 {
@@ -10093,7 +10155,7 @@ h3 {
 
 .span-section5 {
   color: #ff4d4d;
-  font-size: 60px;
+  font-size: 80px;
 }
 
 .p2-section5 {
@@ -10121,18 +10183,18 @@ h3 {
   margin-top: 100px;
 }
 
-/*section7*/
-.section7 {
-  background-color: #ff4d4d;
-  height: 50px;
-}
-
 .div-logo {
   border-radius: 100%;
   height: 50px;
   width: 50px;
   background-color: white;
   margin: 10px;
+}
+
+/*section7*/
+.section7 {
+  background-color: #ff4d4d;
+  height: 80px;
 }
 
 /*fin section 7*/
